test/Common/LinkerScriptParsing/Errors/Sections/OutputSectionPrologue/OutSectAt/Inputs/script1.t
SECTIONS {
  FOO : AT(0xasdf) { *(*foo*) }
}